force-app/main/default/objects/itensSolicitacaoCotacao__c/itensSolicitacaoCotacao__c.object-meta.xml
<CustomObject>
    <label>Item da Solicitação de Cotação</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Nome de Item da Solicitação de Cotação</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Itens da Solicitação de Cotação</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>