force-app/main/default/objects/itensSolicitacaoCotacao__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Itens da Solicitação de Cotação</relationshipLabel>
    <relationshipName>Itens_da_Solicita_o_de_Cota_o</relationshipName>
    <type>Lookup</type>
</CustomField>