force-app/main/default/objects/itensSolicitacaoCotacao__c/fields/quantidade__c.field-meta.xml
<CustomField>
    <fullName>quantidade__c</fullName>
    <label>quantidade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>