force-app/main/default/objects/itensSolicitacaoCotacao__c/fields/solicitacaoDeCotacao__c.field-meta.xml
<CustomField>
    <fullName>solicitacaoDeCotacao__c</fullName>
    <label>Solicitação de cotação</label>
    <referenceTo>solicitacaoDeCotacao__c</referenceTo>
    <relationshipLabel>Itens da Solicitação de Cotação</relationshipLabel>
    <relationshipName>ItensDaSolicitacaoDeCotacao</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>